--- a/public/css/d3touch.css
+++ b/public/css/d3touch.css
@@ -1,21 +1,19 @@
 body, html {
- width:100%;
- height:100%;
+  width:100%;
+  height:100%;
 }
 #vizcontainer {
- width:100%;
- height:100%;
-}
- #touchStatus {
- position: absolute;
- top: 0px;
- left: 0px;
+  width:100%;
+  height:100%;
 }
 svg {
- width: 100%;
- height: 100%;
+  width: 100%;
+  height: 100%;
 }
-li {
- font-size: 30px;
- font-weight: 900;
+#buttons {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
 }
