--- a/public/css/d3touch.css
+++ b/public/css/d3touch.css
@@ -2,14 +2,22 @@ body, html {
   width:100%;
   height:100%;
 }
+
 #vizcontainer {
   width:100%;
   height:100%;
 }
+
 svg {
   width: 100%;
   height: 100%;
 }
+
+.active {
+  stroke: #000;
+  stroke-width: 2px;
+}
+
 /*#buttons {
   width: 100%;
   height: 100%;
