--- a/public/css/d3touch.css
+++ b/public/css/d3touch.css
@@ -1,28 +1,47 @@
-body, html {
-  width:100%;
-  height:100%;
-}
-/*
-#vizcontainer {
-  width:100%;
-  height:100%;
-}*/
-
-svg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+#outer-dropzone {
+  height: 140px;
 }
 
-/*.active {
-  stroke: #000;
-  stroke-width: 2px;
+#inner-dropzone {
+  height: 80px;
 }
-*/
-/*#buttons {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-}*/
+
+.dropzone {
+  background-color: #ccc;
+  border: dashed 4px transparent;
+  border-radius: 4px;
+  margin: 10px auto 30px;
+  padding: 10px;
+  width: 80%;
+  transition: background-color 0.3s;
+}
+
+.drop-active {
+  border-color: #aaa;
+}
+
+.drop-target {
+  background-color: #29e;
+  /*border-color: #fff;*/
+  /*border-style: solid;*/
+}
+
+.drag-drop {
+  display: inline-block;
+  min-width: 40px;
+  /*padding: 2em 0.5em;*/
+
+  color: black;
+  /*background-color: #29e;*/
+  /*border: solid 2px #fff;*/
+
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+
+  /*transition: background-color 0.3s;*/
+}
+
+.drag-drop.can-drop {
+  /*color: #000;*/
+  /*background-color: #4e4;*/
+}
