--- a/public/css/d3touch.css
+++ b/public/css/d3touch.css
@@ -30,6 +30,7 @@
   display: inline-block;
   min-width: 40px;
   /*padding: 2em 0.5em;*/
+  font-size: 200%;
 
   color: black;
   /*background-color: #29e;*/
