--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,5 +1,5 @@
 #outer-dropzone {
-  height: 100px;
+  height: 500px;
   width: 800px;
 }
 
@@ -53,7 +53,7 @@
   min-width: 40px;
   /*padding: 2em 0.5em;*/
   font-size: 200%;
-  color: blue;
+  color: #1A818C;
 
   /*color: white;*/
   /*background-color: #29e;*/
