--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,10 +1,11 @@
 #outer-dropzone {
-  height: 500px;
-  width: 800px;
+  height: 300px;
+  width: 600px;
 }
 
 #inner-dropzone {
   width: 0%;
+  margin-top: 15%;
 }
 
 .block {
