--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -30,7 +30,7 @@
   border-radius: 4px;
   margin: 10px auto 30px;
   padding: 10px;
-  width: 80%;
+  width: 100%;
   color: white;
   /*height: 15px;*/
   transition: background-color 0.3s;
@@ -50,7 +50,7 @@
 #wordtext{
  display: inline-block;
  position: absolute;
- padding: 5%;
+/* margin-top: 1000%;*/
 }
 
 .drag-drop {
