--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,6 +1,7 @@
 #outer-dropzone {
   height: 300px;
   width: 600px;
+  /*border: 1px solid black;*/
 }
 
 #inner-dropzone {
@@ -25,23 +26,24 @@
 .dropzone {
 /*  display: inline-block;
   position: relative;*/
-  background-color: #ccc;
+  /*background-color: #ccc;*/
   /*border: dashed 4px transparent;*/
   border-radius: 4px;
   margin: 10px auto 30px;
   padding: 10px;
-  width: 100%;
+  /*width: 100%;*/
   /*height: 15px;*/
   transition: background-color 0.3s;
+  z-index: -10;
 }
 
 .drop-active {
-  border-color: #aaa;
+  /*border-color: #aaa;*/
 
 }
 
 .drop-target {
-  background-color: #29e;
+  /*background-color: #29e;*/
   /*border-color: #fff;*/
   /*border-style: solid;*/
 }
@@ -73,11 +75,27 @@
 
 .drag-drop.can-drop {
   /*color: #000;*/
-  /*background-color: #4e4;*/
+  background-color: #4e4;
 }
 
 div {
   font-family: sans-serif;
   letter-spacing: 1.5px;
+
+}
+
+#matt {
+  position: absolute;
+  left: 350px;
+  top: 20px;
+  z-index: -5;
+}
+
+#pipe {
+  position: absolute;
+  left: 50px;
+  top: 100px;
+}
+.message {
 
 }
