--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,11 +1,24 @@
+* {
+  border: solid;
+  border-color: green;
+}
+
 #outer-dropzone {
   height: 300px;
-  width: 600px;
+  width: 650px;
+  background-color: #ccc;
+  position: relative;
 }
 
 #inner-dropzone {
+  /*display: inline-block;*/
+  position: absolute;
   width: 0%;
-  margin-top: 35%;
+  background-color: grey;
+  margin-top: 10%;
+  margin-left: 35%;
+
+
 }
 
 .block {
@@ -25,12 +38,11 @@
 .dropzone {
 /*  display: inline-block;
   position: relative;*/
-  background-color: #ccc;
   /*border: dashed 4px transparent;*/
   border-radius: 4px;
-  margin: 10px auto 30px;
+  /*margin: 10px auto 30px;*/
   padding: 10px;
-  width: 100%;
+  /*width: 100%;
   /*height: 15px;*/
   transition: background-color 0.3s;
 }
@@ -48,8 +60,8 @@
 
 #wordtext{
  display: inline-block;
- position: absolute;
-/* margin-top: 1000%;*/
+ position: relative;
+ z-index: -1;
 }
 
 .drag-drop {
