--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,12 +1,12 @@
-* {
+/** {
   border: solid;
   border-color: green;
 }
-
+*/
 #outer-dropzone {
   height: 300px;
   width: 650px;
-  background-color: #ccc;
+ /* background-color: #ccc;*/
   position: relative;
 }
 
@@ -14,7 +14,7 @@
   /*display: inline-block;*/
   position: absolute;
   width: 0%;
-  background-color: grey;
+ /* background-color: grey;*/
   margin-top: 10%;
   margin-left: 35%;
 
