--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -18,7 +18,7 @@ body {
   /*display: inline-block;*/
   position: absolute;
   width: 0%;
-  background-color: grey;
+ /* background-color: grey;*/
   margin-top: 12%;
   margin-left: 37%;
 
