--- a/public/css/interact_demo.css
+++ b/public/css/interact_demo.css
@@ -1,10 +1,29 @@
+/** {
+  border: solid;
+  border-color: green;
+}*/
+
+body {
+  width: 650px;
+  margin-left: 115px;
+}
+
 #outer-dropzone {
-  height: 100px;
-  width: 800px;
+  height: 300px;
+  /*width: 650px;*/
+ /* background-color: #ccc;*/
+  position: relative;
 }
 
 #inner-dropzone {
+  /*display: inline-block;*/
+  position: absolute;
   width: 0%;
+ /* background-color: grey;*/
+  margin-top: 12%;
+  margin-left: 37%;
+
+
 }
 
 .block {
@@ -24,13 +43,11 @@
 .dropzone {
 /*  display: inline-block;
   position: relative;*/
-  background-color: #ccc;
-  border: dashed 4px transparent;
+  /*border: dashed 4px transparent;*/
   border-radius: 4px;
-  margin: 10px auto 30px;
+  /*margin: 10px auto 30px;*/
   padding: 10px;
-  width: 80%;
-  color: white;
+  /*width: 100%;
   /*height: 15px;*/
   transition: background-color 0.3s;
 }
@@ -46,6 +63,12 @@
   /*border-style: solid;*/
 }
 
+#wordtext{
+ display: inline-block;
+ position: relative;
+ z-index: -1;
+}
+
 .drag-drop {
 
   display: inline-block;
@@ -53,7 +76,7 @@
   min-width: 40px;
   /*padding: 2em 0.5em;*/
   font-size: 200%;
-  color: blue;
+  color: #1A818C;
 
   /*color: white;*/
   /*background-color: #29e;*/
@@ -72,5 +95,6 @@
 
 div {
   font-family: sans-serif;
-}
+  letter-spacing: 1.5px;
 
+}
